@@ -66,9 +66,69 @@
 },
 
 
+"ees": {
+	"enabled": true,
+	"exporters": [
+		{
+			"id": "sqs_fail",
+			"type": "*sqs_json_map",
+			// export_path for sqs:  "endpoint"
+			"export_path": "notAValidURL",
+			"tenant": "cgrates.org",
+			"attempts": 1,
+			"fields":[
+				{"tag": "Account", "path": "*exp.Account", "type": "*variable", "value": "~*req.Account"},
+			],
+		},
+		{
+			"id": "kafka_fail",
+			"type": "*kafka_json_map",
+			"export_path": "notAValidURL",
+			"tenant": "cgrates.org",
+			"attempts": 1,
+			"fields":[
+				{"tag": "Account", "path": "*exp.Account", "type": "*variable", "value": "~*req.Account"},
+			],
+		},
+		{
+			"id": "amqp_fail",
+			"type": "*amqp_json_map",
+			"export_path": "notAValidURL",
+			"tenant": "cgrates.org",
+			"attempts": 1,
+			"fields":[
+				{"tag": "Account", "path": "*exp.Account", "type": "*variable", "value": "~*req.Account"},
+			],
+		},
+		{
+			"id": "s3_fail",
+			"type": "*s3_json_map",
+			"export_path": "notAValidURL",
+			"tenant": "cgrates.org",
+			"attempts": 1,
+			"fields":[
+				{"tag": "Account", "path": "*exp.Account", "type": "*variable", "value": "~*req.Account"},
+			],
+		},
+		{
+			"id": "aws_fail",
+			"type": "*amqpv1_json_map",
+			"export_path": "notAValidURL",
+			"tenant": "cgrates.org",
+			"attempts": 1,
+			"fields":[
+				{"tag": "Account", "path": "*exp.Account", "type": "*variable", "value": "~*req.Account"},
+			],
+		},
+	],
+},
+
+
 "apiers": {
 	"enabled": true,
 	"scheduler_conns": ["*internal"],
+	"ees_conns": ["*localhost"]
 },
+
 
 }
