@@ -19,7 +19,20 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>
 */
 package general_tests
 
-/*
+import (
+	"encoding/json"
+	"fmt"
+	"io/ioutil"
+	"net/rpc"
+	"path"
+	"testing"
+	"time"
+
+	"github.com/cgrates/cgrates/config"
+	"github.com/cgrates/cgrates/engine"
+	"github.com/cgrates/cgrates/utils"
+)
+
 var (
 	pstrCfg       *config.CGRConfig
 	pstrRpc       *rpc.Client
@@ -97,13 +110,13 @@ func testPosterITRpcConn(t *testing.T) {
 		t.Fatal(err)
 	}
 }
+
 func testPosterReadFolder(format string) (expEv *engine.ExportEvents, err error) {
 	filesInDir, _ := ioutil.ReadDir(pstrCfg.GeneralCfg().FailedPostsDir)
 	if len(filesInDir) == 0 {
 		err = fmt.Errorf("No files in directory: %s", pstrCfg.GeneralCfg().FailedPostsDir)
 		return
 	}
-
 	for _, file := range filesInDir { // First file in directory is the one we need, harder to find it's name out of config
 		fileName := file.Name()
 		filePath := path.Join(pstrCfg.GeneralCfg().FailedPostsDir, fileName)
@@ -134,7 +147,7 @@ func testPosterITAMQP(t *testing.T) {
 	attrsAA := &utils.AttrSetActions{
 		ActionsId: "ACT_AMQP",
 		Actions: []*utils.TPAction{ // set a action with a wrong endpoint to easily check if it was executed
-			{Identifier: utils.MetaAMQPjsonMap, ExtraParameters: "endpoint"},
+			{Identifier: utils.MetaExport, ExtraParameters: "amqp_fail"},
 		},
 	}
 	if err := pstrRpc.Call(utils.APIerSv2SetActions, attrsAA, &reply); err != nil && err.Error() != utils.ErrExists.Error() {
@@ -158,12 +171,12 @@ func testPosterITAMQP(t *testing.T) {
 		t.Fatalf("Expected 1 event received: %d events", len(ev.Events))
 	}
 	body := ev.Events[0].([]byte)
-	var acc engine.Account
+	var acc map[string]interface{}
 	if err := json.Unmarshal(body, &acc); err != nil {
 		t.Fatal(err)
 	}
-	if acc.ID != utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account) {
-		t.Errorf("Expected %q ,received %q", utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account), acc.ID)
+	if acc[utils.Account] != utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account) {
+		t.Errorf("Expected %q ,received %q", utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account), acc[utils.Account])
 	}
 }
 
@@ -172,7 +185,7 @@ func testPosterITAMQPv1(t *testing.T) {
 	attrsAA := &utils.AttrSetActions{
 		ActionsId: "ACT_AMQPv1",
 		Actions: []*utils.TPAction{ // set a action with a wrong endpoint to easily check if it was executed
-			{Identifier: utils.MetaAMQPV1jsonMap, ExtraParameters: "endpoint"},
+			{Identifier: utils.MetaExport, ExtraParameters: "aws_fail"},
 		},
 	}
 	if err := pstrRpc.Call(utils.APIerSv2SetActions, attrsAA, &reply); err != nil && err.Error() != utils.ErrExists.Error() {
@@ -196,12 +209,12 @@ func testPosterITAMQPv1(t *testing.T) {
 		t.Fatalf("Expected 1 event received: %d events", len(ev.Events))
 	}
 	body := ev.Events[0].([]byte)
-	var acc engine.Account
+	var acc map[string]interface{}
 	if err := json.Unmarshal(body, &acc); err != nil {
 		t.Fatal(err)
 	}
-	if acc.ID != utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account) {
-		t.Errorf("Expected %q ,received %q", utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account), acc.ID)
+	if acc[utils.Account] != utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account) {
+		t.Errorf("Expected %q ,received %q", utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account), acc[utils.Account])
 	}
 }
 
@@ -210,7 +223,7 @@ func testPosterITSQS(t *testing.T) {
 	attrsAA := &utils.AttrSetActions{
 		ActionsId: "ACT_SQS",
 		Actions: []*utils.TPAction{ // set a action with a wrong endpoint to easily check if it was executed
-			{Identifier: utils.MetaSQSjsonMap, ExtraParameters: "endpoint"},
+			{Identifier: utils.MetaExport, ExtraParameters: "sqs_fail"},
 		},
 	}
 	if err := pstrRpc.Call(utils.APIerSv2SetActions, attrsAA, &reply); err != nil && err.Error() != utils.ErrExists.Error() {
@@ -234,12 +247,12 @@ func testPosterITSQS(t *testing.T) {
 		t.Fatalf("Expected 1 event received: %d events", len(ev.Events))
 	}
 	body := ev.Events[0].([]byte)
-	var acc engine.Account
+	var acc map[string]interface{}
 	if err := json.Unmarshal(body, &acc); err != nil {
 		t.Fatal(err)
 	}
-	if acc.ID != utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account) {
-		t.Errorf("Expected %q ,received %q", utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account), acc.ID)
+	if acc[utils.Account] != utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account) {
+		t.Errorf("Expected %q ,received %q", utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account), acc[utils.Account])
 	}
 }
 
@@ -248,7 +261,7 @@ func testPosterITS3(t *testing.T) {
 	attrsAA := &utils.AttrSetActions{
 		ActionsId: "ACT_S3",
 		Actions: []*utils.TPAction{ // set a action with a wrong endpoint to easily check if it was executed
-			{Identifier: utils.MetaS3jsonMap, ExtraParameters: "endpoint"},
+			{Identifier: utils.MetaExport, ExtraParameters: "s3_fail"},
 		},
 	}
 	if err := pstrRpc.Call(utils.APIerSv2SetActions, attrsAA, &reply); err != nil && err.Error() != utils.ErrExists.Error() {
@@ -272,12 +285,12 @@ func testPosterITS3(t *testing.T) {
 		t.Fatalf("Expected 1 event received: %d events", len(ev.Events))
 	}
 	body := ev.Events[0].([]byte)
-	var acc engine.Account
+	var acc map[string]interface{}
 	if err := json.Unmarshal(body, &acc); err != nil {
 		t.Fatal(err)
 	}
-	if acc.ID != utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account) {
-		t.Errorf("Expected %q ,received %q", utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account), acc.ID)
+	if acc[utils.Account] != utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account) {
+		t.Errorf("Expected %q ,received %q", utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account), acc[utils.Account])
 	}
 }
 
@@ -286,7 +299,7 @@ func testPosterITKafka(t *testing.T) {
 	attrsAA := &utils.AttrSetActions{
 		ActionsId: "ACT_Kafka",
 		Actions: []*utils.TPAction{ // set a action with a wrong endpoint to easily check if it was executed
-			{Identifier: utils.MetaKafkajsonMap, ExtraParameters: "endpoint"},
+			{Identifier: utils.MetaExport, ExtraParameters: "kafka_fail"},
 		},
 	}
 	if err := pstrRpc.Call(utils.APIerSv2SetActions, attrsAA, &reply); err != nil && err.Error() != utils.ErrExists.Error() {
@@ -310,12 +323,12 @@ func testPosterITKafka(t *testing.T) {
 		t.Fatalf("Expected 1 event received: %d events", len(ev.Events))
 	}
 	body := ev.Events[0].([]byte)
-	var acc engine.Account
+	var acc map[string]interface{}
 	if err := json.Unmarshal(body, &acc); err != nil {
 		t.Fatal(err)
 	}
-	if acc.ID != utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account) {
-		t.Errorf("Expected %q ,received %q", utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account), acc.ID)
+	if acc[utils.Account] != utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account) {
+		t.Errorf("Expected %q ,received %q", utils.ConcatenatedKey(pstrAccount.Tenant, pstrAccount.Account), acc[utils.Account])
 	}
 }
 
@@ -324,4 +337,3 @@ func testPosterITStopCgrEngine(t *testing.T) {
 		t.Error(err)
 	}
 }
-*/
