@@ -504,6 +504,9 @@ const (
 	Actions                     = "Actions"
 	ActionPlans                 = "ActionPlans"
 	ActionTriggers              = "ActionTriggers"
+	BalanceMap                  = "BalanceMap"
+	UnitCounters                = "UnitCounters"
+	UpdateTime                  = "UpdateTime"
 	SharedGroups                = "SharedGroups"
 	Timings                     = "Timings"
 	Rates                       = "Rates"
